[package]
name = "restore_after_delete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
tokio = { version = "1", features = ["full"] }
#aws-sdk-s3 = "0.34.0"
#aws-config = "0.56.1"
#aws-smithy-http = "0.57.1"
aws-sdk-s3 = "0.24.0"
aws-config = "0.54.1"
aws-smithy-http = "0.54.3"
url = "2.4.1"